# split-text-bot

./: LICENSE  pyproject.toml
split_text_bot/: main.py
